--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 
 <title>Ans Raza</title>
-<link rel="stylesheet" href="!!_styles.css">
+<link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-<script re="javascript/text" src="!!_java.js"></script>
+<script re="javascript/text" src="java.js"></script>
 <link rel="icon" href="logo.svg">
 
 
