--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                     <!--  /*===========  <<<  Navgation  Buttons     ===========*/ -->
 
                                     <nav class="navbar_holder">  
-                                                      <span   class="span"><a href="#home" class="A fa fa-home" title="Home">       Home          </a></span>
+                                                      <span   class="span"><a href="../study.html" class="A fa fa-home" title="Home">       Home          </a></span>
                                                       <span   class="span"><a href="#education"class="A fa fa-graduation-cap" title="Education" >  Education     </a></span>
                                                       <span   class="span"><a href="#skill" class="A fa fa-tag" title="Skills">      Skills        </a></span>
                                                       <span    class="span"><a href="#Services"class="A fa  fa-support" title="Services" >   Services      </a></span>
