--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
 </footer>
 
 
-    <!-- 
 <div class="top">  <a  href="#"> Top </a> </div>
 
- /*===========   Progress wrap >>>  ===========*/ -->
+
+    <!--  /*===========   Progress wrap >>>  ===========*/ -->
 	
  	<div class="progress-wrap"> 
 		<svg class="progress-circle svg-content      " width="100%" height="100%" viewBox="-1 -1 102 102">
