--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 </footer>
 
 
-<div class="top">  <a  href="#"> Top </a> </div>
+<div class="top">  <a  href="#"> ^ </a> </div>
 
 
     <!--  /*===========   Progress wrap >>>  ===========*/ -->
