--- a/gr/g2.html
+++ b/gr/g2.html
@@ -26,10 +26,10 @@
 </head>
 <body>
 
-<h1>Extract +92 Phone Numbers</h1> 
-    <h2>
-        <a href="https://0xansr.github.io/gr/g.html"></a>
-    </h2>
+<h1>Extract +92 Phone Numbers
+    <button onclick="window.location.href='https://0xansr.github.io/gr/g2.html'">Go to G2 Page</button>
+</h1> 
+
 <textarea id="inputText" placeholder="Paste your text here..."></textarea>
 <button onclick="extractPhoneNumbers()">Extract Phone Numbers</button>
 
