--- a/gr/g2.html
+++ b/gr/g2.html
@@ -27,7 +27,7 @@
 <body>
 
 <h1>Extract +92 Phone Numbers
-    <button onclick="window.location.href='https://0xansr.github.io/gr/g2.html'">Upload file Page</button>
+    <button onclick="window.location.href='https://0xansr.github.io/gr/g2.html'">only text paste</button>
 </h1> 
 
 <textarea id="inputText" placeholder="Paste your text here..."></textarea>
