Moved files  main directory

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#014EAA">
-    <meta name="keyword" content="Jasa bikin website, Portfolio Muhammad Zulfa, Developer Muhammad Zulfa, Muhammad Zulfa, Dev by Z">
-    <meta name="description" content="Portfolio Muhammad Zulfa">
-    <title>Muhammad Zulfa</title>
+    <meta name="keyword" content="Jasa bikin website, Portfolio Ans Raza, Developer Ans Raza, Ans Raza, Dev by Z">
+    <meta name="description" content="Portfolio Ans Raza">
+    <title>Ans Raza</title>
     <link rel="icon" href="https://img.icons8.com/fluent/48/000000/source-code.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/slideinscroll/slidein.css">
@@ -21,7 +21,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="https://muhammadzulfa.github.io">Muhammad Zulfa</a>
+            <a class="navbar-brand" href="https://muhammadzulfa.github.io">Ans Raza</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,8 +42,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-lg-6">
-                    <h1>Muhammad Zulfa</h1>
-                    <p>Halo, Perkenalkan nama saya Muhammad Zulfa. Saya lulusan Teknik Komputer Jaringan di SMKN 2 Kandangan (Kalimantan Selatan). Saat ini saya sedang bekerja sebagai frelancer Fullstack Developer. Saya mampu membuat aplikasi front end menggunakan VueJs adapun kemampuan saya di back end menggunakan Laravel.</p>
+                    <h1>Ans Raza</h1>
+                    <p>Halo, Perkenalkan nama saya Ans Raza. Saya lulusan Teknik Komputer Jaringan di SMKN 2 Kandangan (Kalimantan Selatan). Saat ini saya sedang bekerja sebagai frelancer Fullstack Developer. Saya mampu membuat aplikasi front end menggunakan VueJs adapun kemampuan saya di back end menggunakan Laravel.</p>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mhmmdzlfa@gmail.com"
                         class="btn btn-primary btn-user">
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="17" height="17"
@@ -507,7 +507,7 @@
 
     <div class="footer shadow-lg">
         <div class="container">
-            <p>&copy; 2020 Designed by Muhammad Zulfa</p>
+            <p>&copy; 2020 Designed by Ans Raza</p>
         </div>
     </div>
 
