--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="navbar-nav ml-auto">
                     <a class="nav-link" href="#home">Home</a>
                     <a class="nav-link" href="#experience">Experience</a>
-                    <a class="nav-link" href="#skills">Skills</a>
+                    <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLScPhSaQUQ6Tz0wy7BFB0SGz-9w8mAssUTLjKPusfzrwbDGxCA/viewform">Skills</a>
                     <a class="nav-link" href="#projects">Projects</a>
                     <a class="nav-link" href="#contact">Contact</a>
                 </div>
