--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="https://muhammadzulfa.github.io">Ans Raza</a>
+            <a class="navbar-brand" href="https://0xAnsR.github.io">Ans Raza</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -490,7 +490,7 @@
         <div class="contact">
             <div class="container">
                 <div class="text-center">
-                    <img src="img/muhammadzulfa.jpg" class="img-fluid pp mt-5 js-slidein" alt="muhammadzulfa">
+                    <img src="img/0xAnsR.jpg" class="img-fluid pp mt-5 js-slidein" alt="0xAnsR">
                     <h1 class="js-slidein"><b>Muhammad</b> Zulfa</h1>
                     <p class="js-slidein">Fullstack Web Developer</p>
 
