--- a/AInML.html
+++ b/AInML.html
@@ -111,3 +111,140 @@
 
 </body>
 </html>
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Azure AI Fundamentals Exam Practice</title>
+    <style>
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; color: #333; max-width: 800px; margin: 0 auto; padding: 20px; background-color: #f4f7f9; }
+        .exam-header { background-color: #0078d4; color: white; padding: 20px; border-radius: 8px; margin-bottom: 30px; text-align: center; }
+        .question-card { background: white; padding: 25px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); margin-bottom: 25px; }
+        .question-meta { font-size: 0.9em; color: #666; margin-bottom: 10px; border-bottom: 1px solid #eee; padding-bottom: 5px; }
+        .question-text { font-weight: 600; margin-bottom: 15px; }
+        .options { list-style-type: none; padding: 0; }
+        .option { margin-bottom: 10px; padding: 10px; border: 1px solid #ddd; border-radius: 4px; transition: background-color 0.2s; }
+        .option:hover { background-color: #f0f7ff; border-color: #0078d4; cursor: pointer; }
+        .table-data { width: 100%; border-collapse: collapse; margin: 15px 0; font-size: 0.9em; }
+        .table-data th, .table-data td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+        .table-data th { background-color: #f8f8f8; }
+        .note { font-style: italic; font-size: 0.85em; color: #d83b01; margin-top: 10px; }
+    </style>
+</head>
+<body>
+
+<div class="exam-header">
+    <h1>Azure AI Fundamentals Practice Questions</h1>
+    <p>Document Content Conversion (Pages 1-66)</p>
+</div>
+
+<div class="question-card">
+    <div class="question-meta">Question 2 (Page 1)</div>
+    <div class="question-text">You use Azure Machine Learning designer to publish an inference pipeline. Which two parameters should you use to access the web service? [cite: 1]</div>
+    <ul class="options">
+        <li class="option">A. the authentication key [cite: 3]</li>
+        <li class="option">B. the REST endpoint [cite: 3]</li>
+        <li class="option">C. the training endpoint [cite: 3]</li>
+        <li class="option">D. the model name [cite: 4]</li>
+    </ul>
+    <p class="note">NOTE: Each correct selection is worth one point. [cite: 2]</p>
+</div>
+
+<div class="question-card">
+    <div class="question-meta">Question 3 (Page 2)</div>
+    <div class="question-text">For each of the following statements, select Yes if the statement is true. Otherwise, select No. [cite: 5, 6]</div>
+    <table class="table-data">
+        <tr><th>Statement</th><th>Yes</th><th>No</th></tr>
+        <tr><td>You train a regression model by using unlabeled data. [cite: 7]</td><td></td><td>X</td></tr>
+        <tr><td>The classification technique is used to predict sequential numerical values over time. [cite: 8]</td><td></td><td>X</td></tr>
+        <tr><td>Grouping items by their common characteristics is an example of clustering. [cite: 9]</td><td>X</td><td></td></tr>
+    </table>
+</div>
+
+<div class="question-card">
+    <div class="question-meta">Question 5 (Page 4)</div>
+    <div class="question-text">You have an Azure Machine Learning model that predicts product quality. Based on the sample data below: [cite: 11]</div>
+    <table class="table-data">
+        <tr><th>Date</th><th>Time</th><th>Mass (kg)</th><th>Temperature (C)</th><th>Quality Test</th></tr>
+        <tr><td>26/02/2021</td><td>15:31:07</td><td>2.108</td><td>62.5</td><td>Pass</td></tr>
+        <tr><td>26/02/2021</td><td>15:31:39</td><td>2.099</td><td>62.4</td><td>Pass</td></tr>
+        <tr><td>26/02/2021</td><td>02:32:21</td><td>2.098</td><td>66.4</td><td>Fail</td></tr>
+    </table>
+    <table class="table-data">
+        <tr><th>Statements</th><th>Yes</th><th>No</th></tr>
+        <tr><td>Mass (kg) is a feature. [cite: 15]</td><td>X</td><td></td></tr>
+        <tr><td>Quality Test is a label. [cite: 15]</td><td>X</td><td></td></tr>
+        <tr><td>Temperature (C) is a label. [cite: 16]</td><td></td><td>X</td></tr>
+    </table>
+</div>
+
+<div class="question-card">
+    <div class="question-meta">Question 8 (Page 8)</div>
+    <div class="question-text">Which type of machine learning should you use to identify groups of people who have similar purchasing habits? [cite: 19]</div>
+    <ul class="options">
+        <li class="option">A. Clustering [cite: 19]</li>
+        <li class="option">B. Classification [cite: 19]</li>
+        <li class="option">C. Regression [cite: 19]</li>
+    </ul>
+</div>
+
+<div class="question-card">
+    <div class="question-meta">Question 12 (Page 12)</div>
+    <div class="question-text">Analyze the capabilities of Object Detection: [cite: 27]</div>
+    <table class="table-data">
+        <tr><th>Statement</th><th>Yes</th><th>No</th></tr>
+        <tr><td>Object detection can identify the location of a damaged product in an image. [cite: 29]</td><td>X</td><td></td></tr>
+        <tr><td>Object detection can identify multiple instances of a damaged product in an image. [cite: 30]</td><td>X</td><td></td></tr>
+        <tr><td>Object detection can identify multiple types of damaged products in an image. [cite: 31]</td><td>X</td><td></td></tr>
+    </table>
+</div>
+
+<div class="question-card">
+    <div class="question-meta">Question 25 (Page 25)</div>
+    <div class="question-text">According to Microsoft's _________ principle of responsible AI, AI systems should NOT reflect biases from the data sets used to train them. [cite: 58]</div>
+    <ul class="options">
+        <li class="option">Fairness [cite: 58]</li>
+    </ul>
+</div>
+
+<div class="question-card">
+    <div class="question-meta">Question 31 (Page 32)</div>
+    <div class="question-text">You need to store reviews in English and present them to users in their respective language based on location. Which NLP workload should you use? [cite: 68]</div>
+    <ul class="options">
+        <li class="option">A. Speech recognition [cite: 68]</li>
+        <li class="option">B. Language modeling [cite: 68]</li>
+        <li class="option">C. Translation [cite: 68]</li>
+        <li class="option">D. Key phrase extraction [cite: 68]</li>
+    </ul>
+</div>
+
+<div class="question-card">
+    <div class="question-meta">Question 34 (Page 35)</div>
+    <div class="question-text">What are three stages in a transformer model? [cite: 78]</div>
+    <ul class="options">
+        <li class="option">A. Embedding calculation [cite: 78]</li>
+        <li class="option">C. Next token prediction [cite: 78]</li>
+        <li class="option">D. Tokenization [cite: 78]</li>
+    </ul>
+</div>
+
+<div class="question-card">
+    <div class="question-meta">Question 42 (Page 44)</div>
+    <div class="question-text">Match tasks to machine learning models: [cite: 532]</div>
+    <table class="table-data">
+        <tr><th>Scenario</th><th>Model Type</th></tr>
+        <tr><td>Assign categories to passengers based on demographic data. [cite: 535]</td><td>Clustering</td></tr>
+        <tr><td>Predict the amount of consumed fuel based on flight distance. [cite: 536]</td><td>Regression</td></tr>
+        <tr><td>Predict whether a passenger will miss their flight based on demographic data. [cite: 531, 536]</td><td>Classification</td></tr>
+    </table>
+</div>
+
+</body>
+</html>
