Add Credly badge embed code to index.html

--- a/index.html
+++ b/index.html
@@ -505,6 +505,9 @@
         </div>
     </div>
 
+
+    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9cf11f2f-f03b-45a4-b411-e6735c1d401b" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+
     <div class="footer shadow-lg">
         <div class="container">
             <p>&copy; 2020 Designed by Ans Raza</p>
