Revise personal introduction in index.html
Updated personal introduction to reflect current studies and work in cybersecurity.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
             <div class="row">
                 <div class="col-md-8 col-lg-6">
                     <h1>Ans Raza</h1>
-                    <p>Halo, Perkenalkan nama saya Ans Raza. Saya lulusan Teknik Komputer Jaringan di SMKN 2 Kandangan (Kalimantan Selatan). Saat ini saya sedang bekerja sebagai frelancer Fullstack Developer. Saya mampu membuat aplikasi front end menggunakan VueJs adapun kemampuan saya di back end menggunakan Laravel.</p>
+                    <p>Hello, my name is Ans Raza. I am a Computer Science student and a cybersecurity enthusiast.
+I work as an ethical penetration tester with proper authorization and actively learn Python
+for cybersecurity, automation, and basic machine learning. I also write technical blogs and
+share my learning journey on GitHub.</p>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mhmmdzlfa@gmail.com"
                         class="btn btn-primary btn-user">
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="17" height="17"
