Update name Anas Raza

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ share my learning journey on GitHub.</p>
             <div class="container">
                 <div class="text-center">
                     <img src="img/0xAnsR.jpg" class="img-fluid pp mt-5 js-slidein" alt="0xAnsR">
-                    <h1 class="js-slidein"><b>Muhammad</b> Zulfa</h1>
+                    <h1 class="js-slidein"><b>Anas</b> Raza</h1>
                     <p class="js-slidein">Fullstack Web Developer</p>
 
                     <div class="js-slidein">
