Add links to social media icons in index.html
Updated social media icons to include links that open in a new tab.

--- a/index.html
+++ b/index.html
@@ -497,12 +497,12 @@ share my learning journey on GitHub.</p>
                     <h1 class="js-slidein"><b>Anas</b> Raza</h1>
                     <p class="js-slidein">Fullstack Web Developer</p>
 
-                    <div class="js-slidein">
-                        <img src="https://img.icons8.com/color/48/000000/facebook-new.png" class="smd" id="go-fb" />
-                        <img src="https://img.icons8.com/color/48/000000/telegram-app.png" class="smd" id="go-tl" />
-                        <img src="https://img.icons8.com/fluent/48/000000/instagram-new.png" class="smd" id="go-ig" />
-                        <img src="https://img.icons8.com/fluent/48/000000/github.png" class="smd" id="go-github" />
-                    </div>
+                  <div class="js-slidein">
+    <img src="https://img.icons8.com/color/48/000000/facebook-new.png" class="smd" id="go-fb" onclick="window.open('https://fb.com/0xAnsR','_blank')" />
+    <img src="https://img.icons8.com/color/48/000000/telegram-app.png" class="smd" id="go-tl" onclick="window.open('https://t.me/oxansr','_blank')" />
+    <img src="https://img.icons8.com/fluent/48/000000/instagram-new.png" class="smd" id="go-ig" onclick="window.open('https://instagram.com/0xansr','_blank')" />
+    <img src="https://img.icons8.com/fluent/48/000000/github.png" class="smd" id="go-github" onclick="window.open('https://github.com/0xAnsR','_blank')" />
+</div>
                 </div>
             </div>
         </div>
