--- a/SEBI/COMP.HTML
+++ b/SEBI/COMP.HTML
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Scribd Document View</title>
+    <style>
+        body { background-color: #f0f0f0; display: flex; flex-direction: column; align-items: center; padding: 20px; font-family: sans-serif; }
+        .page-container { margin-bottom: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); background: white; }
+        iframe { width: 900px; height: 1200px; border: none; }
+        .label { padding: 5px; font-weight: bold; color: #555; }
+    </style>
+</head>
+<body>
+<div class="page-container"><div class="label">Page 1</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/1-051061a1d5.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 2</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/2-de2a5f00ca.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 3</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/3-92a4eb80f7.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 4</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/4-28e8e516e8.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 5</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/5-2175078fb2.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 6</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/6-78505a6215.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 7</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/7-c239513026.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 8</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/8-2e4a81dc86.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 9</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/9-0d18db31ce.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 10</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/10-b3ca0da648.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 11</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/11-4099a86220.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 13</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/13-48e1498855.jpg"></iframe></div>
 
+<div class="page-container"><div class="label">Page 14</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/14-71cad6958d.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 14</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/14-71cad6958d.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 15</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/15-eaa4d31719.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 16</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/16-a2e6b236de.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 17</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/17-47c4ef9dfd.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 18</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/18-c49c02b3da.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 19</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/19-14ca3d0e58.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 20</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/20-4839970b3d.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 21</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/21-17893f0691.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 22</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/22-18cb26704d.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 23</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/23-3952ff76ce.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 24</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/24-3398a637dd.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 25</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/25-1c059703fb.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 26</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/26-73004df07f.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 27</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/27-3dd4d548c6.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 28</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/28-e897f13ba7.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 29</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/29-8ba92b156b.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 30</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/30-b9fd2662f9.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 31</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/31-8bfa99413e.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 32</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/32-7fbaee7ef3.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 33</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/33-a44a1906e9.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 34</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/34-fa4d303e9c.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 35</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/35-123fe7122e.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 36</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/36-78758590f4.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 37</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/37-d6ea359a3d.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 38</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/38-28483f4f9f.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 39</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/39-3d543d754f.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 40</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/40-893a5f8932.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 41</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/41-9a8e30f613.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 42</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/42-88836b7142.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 43</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/43-4c87e9ce88.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 44</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/44-168abeb186.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 45</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/45-664dd78408.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 46</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/46-4377ce9bfj.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 47</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/47-eedff5f7fc.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 48</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/48-e87090f012.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 49</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/49-a50467f6bc.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 50</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/50-c454eed3ca.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 51</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/51-68ff091519.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 52</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/52-408dbd58f3.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 53</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/53-423dbfe3bc.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 54</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/54-be5c0db761.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 55</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/55-259afbe6ef.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 56</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/56-5f8e2a058c.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 57</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/57-2955860288.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 58</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/58-06a26d398b.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 59</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/59-c7f7591647.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 60</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/60-a461d83339.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 61</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/61-87d2fa628b.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 62</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/62-9dde464ca7.jpg"></iframe></div>
+<div class="page-container"><div class="label">Page 63</div><iframe src="https://html.scribdassets.com/6c7cm1dgg0ffbdow/images/63-1691d48443.jpg"></iframe></div>
+
+</body>
+</html>
