--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLScPhSaQUQ6Tz0wy7BFB0SGz-9w8mAssUTLjKPusfzrwbDGxCA/viewform">Skills</a>
                     <a class="nav-link" href="#projects">Projects</a>
                     <a class="nav-link" href="#contact">Contact</a>
-                     <a class="nav-link" href="#education & noted">.edu</a>
+                     <a class="nav-link" href="edu.html">.edu</a>
                 </div>
             </div>
         </div>
